tests/activitygen/errors/passanger_disallowed/output.activitygen
first completed in getStreet() of City: Consolidation of data not needed in ActivityGen any more
--> work position: 
  |-> in city: 790
  |-> out city: 80
  |-> in+out city: 870
--> population: 
  |-> city households: 500
  |-> city people: 1000
    |-> city single: 190 / (in) couple: 620
    |-> city adults: 810
      |-> estimation: 810
      |-> retired: 240
    |-> city children: 190
      |-> estimation: 190
  |-> working people: 730
    |-> working people in city: 530
    |-> working people from outside: 200
no problem during bus line trip generation...
after public transportation: 248
WARNING: 129 ( 25.80% ) households' trips haven't been generated: would probably need more iterations for rebuilding...
after household activities: 396
no problem during in/out traffic generation...
after incoming/outgoing traffic: 796
Before Random traffic generation (days are still entire):
- Total number of trips: 1444
- Total daily trips: 648
- Total one-day trips: 148
added uniform random trips: 361
no problem during random traffic generation...
after random traffic: 1157
total trips generated: 1157
total trips finally taken: 891
...sorted by departure time.

first real trip: 1, 0:2:42
last real trip: 1, 23:59:34
histogram[ hour 0 ] = 6
histogram[ hour 1 ] = 4
histogram[ hour 2 ] = 8
histogram[ hour 3 ] = 8
histogram[ hour 4 ] = 8
histogram[ hour 5 ] = 5
histogram[ hour 6 ] = 28
histogram[ hour 7 ] = 37
histogram[ hour 8 ] = 177
histogram[ hour 9 ] = 106
histogram[ hour 10 ] = 17
histogram[ hour 11 ] = 24
histogram[ hour 12 ] = 35
histogram[ hour 13 ] = 15
histogram[ hour 14 ] = 11
histogram[ hour 15 ] = 10
histogram[ hour 16 ] = 43
histogram[ hour 17 ] = 137
histogram[ hour 18 ] = 100
histogram[ hour 19 ] = 20
histogram[ hour 20 ] = 20
histogram[ hour 21 ] = 22
histogram[ hour 22 ] = 18
histogram[ hour 23 ] = 32
Success.
